App #575 Home, removed a testing code from home activity and fixed the position calculation logic for search box (to set-up snap points) for the case the page has a scrolling on load. Adjusted CSS of the HomeNavBar for medium sizes so the searchbox has space and the bar edge gaps looks more standard for the size

--- a/prototypes/app/source/css/components/HomeNavBar.styl
+++ b/prototypes/app/source/css/components/HomeNavBar.styl
@@ -56,6 +56,10 @@ $HomeNavBar-Height = $HomeNavBar-ContentHeight + ($HomeNavBar-VGap * 2);
         // positioning:
         padding-top: $HomeNavBar-VGap;
         padding-left: $brandLeft;
+        
+        @media $mediaMaxSm {
+            padding-left: $grid-gap;
+        }
 
         > a {
             display: inline-block;
@@ -72,6 +76,10 @@ $HomeNavBar-Height = $HomeNavBar-ContentHeight + ($HomeNavBar-VGap * 2);
         padding-top: $HomeNavBar-VGap;
         padding-right: 40px;
         float: right;
+        
+        @media $mediaMaxSm {
+            padding-right: $grid-gap;
+        }
 
         > ul {
             list-style: none;
@@ -81,7 +89,15 @@ $HomeNavBar-Height = $HomeNavBar-ContentHeight + ($HomeNavBar-VGap * 2);
 
             > li {
                 display: inline-block;
-                margin: 0 18px;
+                margin: 0 0 0 16px;
+                
+                @media $mediaMaxSm {
+                    margin-left: 14px;
+                    
+                    &:first-child {
+                        margin-left: 0;
+                    }
+                }
 
                 // For the help link to get dropdown in the correct place
                 position: relative;
